Update package version
- Fix a new Long implementation